# PromptOptimizer

./: .cursorrules  .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: ComparisonView.vue  ModelSelector.vue  OptimizationProgress.vue  PromptEditor.vue  TokenAnalyzer.vue
frontend/src/plugins/: axios.ts
frontend/src/stores/: prompt.ts
frontend/src/types/: optimization.ts  plotly.d.ts
frontend/src/views/: HomeView.vue
src/api/: main.py
src/api/routes/: explanation_routes.py  prompt_routes.py
src/api/templates/: index.html
src/config/: lime_config.py  settings.py
src/database/: mongodb.py
src/models/: lime_analyzer.py  llm_client.py
src/services/: prompt_service.py
src/utils/: logger.py  text_processing.py
